--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -144,8 +144,9 @@
                     <td>@currentRow.MethodName</td>
                     <td>@currentRow.Source</td>
                     <td>
-                        @currentRow.StackTrace 
-                        <br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis(`@currentRow.StackTrace`);" />
+                        @currentRow.StackTrace
+                        @if (currentRow.StackTrace.Contains('\n') || (currentRow.StackTrace.Length >= 40))
+                            {<br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis(`@currentRow.StackTrace`);" />}
                     </td>
                     <td>
                         @if (currentRow.Important == null)
