--- a/InternshipSkeleton/Views/LogInfo/Index.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/Index.cshtml
@@ -139,7 +139,11 @@
                     <td>@currentRow.WebRequestID</td>
                     <td>@currentRow.Message</td>
                     <td>@currentRow.MethodName</td>
-                    <td>@currentRow.Object</td>
+                    <td>
+                        @currentRow.Object
+                        @if (currentRow.Object.Contains('\n') || (currentRow.Object.Length >= 40))
+                            {<br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis(`@currentRow.Object`);" />}
+                    </td>
                     <td>
                         @if (currentRow.Important == null)
                         {
@@ -174,11 +178,21 @@ else
     <button class="modalButton" onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
 </div>
 
+<div class="reveal large" id="ellipsis-modal" data-close-on-click>
+    <button type="button" class="close" aria-label="Close" onclick="closeEllipsis()">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <div id="ellipsisContent"> </div>
+</div>
+
 @section scripts
 {
 <script language="javascript" type="text/javascript">
     var exampleModal;
     var exampleModalVisible = false;
+
+    var ellipsisModal;
+    var ellipsisModalVisible = false;
 
     var currentUserID = null;
     var currentTimeStamp = null;
@@ -219,16 +233,31 @@ else
         exampleModal.close();
     };
 
+    function openEllipsis(Object) {
+        event.preventDefault;
+        $("#ellipsisContent").html(Object); //writing the stack trace into a div in the modal
+        ellipsisModal.open();
+    }
+
+    function closeEllipsis() {
+        ellipsisModal.close();
+    }
+
     $(document).ready(function () {
-
         exampleModal = new Foundation.Reveal($("#example-modal"));
-
         $("#example-modal").on("open.zf.reveal", function () {
             exampleModalVisible = true;
         });
-
         $("#example-modal").on("closed.zf.reveal", function () {
             exampleModalVisible = false;
+        });
+
+        ellipsisModal = new Foundation.Reveal($("#ellipsis-modal"));
+        $("#ellipsis-modal").on("open.zf.reveal", function () {
+            ellipsisModalVisible = true;
+        });
+        $("#ellipsis-modal").on("closed.zf.reveal", function () {
+            ellipsisModalVisible = false;
         });
 
         $(window).keydown(function(event){ /* keep the page from submitting when user presses Enter */
