--- a/InternshipSkeleton/Views/LogControllerAction/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/SearchIndex.cshtml
@@ -90,7 +90,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (CombinedLogControllerActionDataModel currentRow in Model.Items)
+           @foreach (CombinedLogControllerActionDataModel currentRow in Model.Items)
             {
             <tr>
                 <td>@currentRow.EmailAddress</td>
@@ -98,7 +98,11 @@
                 <td>@currentRow.WebRequestID</td>
                 <td>@currentRow.ControllerName</td>
                 <td>@currentRow.ActionName</td>
-                <td>@currentRow.Parameters</td>
+                <td>
+                    @currentRow.Parameters
+                    @if (currentRow.Parameters.Contains('\n') || (currentRow.Parameters.Length >= 40))
+                    {<br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis(`@currentRow.Parameters`);" />}
+                </td>
                 <td>
                     @if (currentRow.Important == null) 
                     {
@@ -132,9 +136,19 @@ else
     <button class="modalButton" onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
 </div>
 
+<div class="reveal large" id="ellipsis-modal" data-close-on-click>
+    <button type="button" class="close" aria-label="Close" onclick="closeEllipsis()">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <div id="ellipsisContent"> </div>
+</div>
+
 <script>
     var exampleModal;
     var exampleModalVisible = false;
+
+    var ellipsisModal;
+    var ellipsisModalVisible = false;
 
     var currentUserID = null;
     var currentTimeStamp = null;
@@ -170,15 +184,31 @@ else
         exampleModal.close();
     };
 
+    function openEllipsis(Parameters) {
+        event.preventDefault;
+        $("#ellipsisContent").html(Parameters); //writing the stack trace into a div in the modal
+        ellipsisModal.open();
+    }
+
+    function closeEllipsis() {
+        ellipsisModal.close();
+    }
+
     $(document).ready(function () {
         exampleModal = new Foundation.Reveal($("#example-modal"));
-
         $("#example-modal").on("open.zf.reveal", function () {
             exampleModalVisible = true;
         });
-
         $("#example-modal").on("closed.zf.reveal", function () {
             exampleModalVisible = false;
+        });
+
+        ellipsisModal = new Foundation.Reveal($("#ellipsis-modal"));
+        $("#ellipsis-modal").on("open.zf.reveal", function () {
+            ellipsisModalVisible = true;
+        });
+        $("#ellipsis-modal").on("closed.zf.reveal", function () {
+            ellipsisModalVisible = false;
         });
     });
 
