--- a/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
@@ -135,8 +135,16 @@
                     <td>@currentRow.TimeStamp</td>
                     <td>@currentRow.WebRequestID</td>
                     <td>@currentRow.UserID</td>
-                    <td>@currentRow.RawURL</td>
-                    <td>@currentRow.Parameters</td>
+                    <td>
+                        @currentRow.RawURL
+                        @if (currentRow.RawURL.Contains('\n') || (currentRow.RawURL.Length >= 40))
+                        {<br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis(`@currentRow.RawURL`);" />}
+                    </td>
+                    <td>
+                        @currentRow.Parameters
+                        @if (currentRow.Parameters.Contains('\n') || (currentRow.Parameters.Length >= 40))
+                        {<br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis(`@currentRow.Parameters`);" />}
+                    </td>
                     <td>
                         @if (currentRow.Important == null) 
                         {
@@ -169,11 +177,21 @@ else
     <button class="modalButton" onclick="UpdateImportance(@id, '@sortBy', '@sortDir')">Update</button>
 </div>
 
+<div class="reveal large" id="ellipsis-modal" data-close-on-click>
+    <button type="button" class="close" aria-label="Close" onclick="closeEllipsis()">
+        <span aria-hidden="true">&times;</span>
+    </button>
+    <div id="ellipsisContent"> </div>
+</div>
+
 @section scripts
 {
     <script language="javascript" type="text/javascript">
     var exampleModal;
     var exampleModalVisible = false;
+
+    var ellipsisModal;
+    var ellipsisModalVisible = false;
 
     var currentTimeStamp = null;
     var currentWebRequestID = null;
@@ -211,16 +229,31 @@ else
         exampleModal.close();
     };
 
+    function openEllipsis(param) {
+        event.preventDefault;
+        $("#ellipsisContent").html(param);
+        ellipsisModal.open();
+    }
+
+    function closeEllipsis() {
+        ellipsisModal.close();
+    }
+
     $(document).ready(function () {
-
         exampleModal = new Foundation.Reveal($("#example-modal"));
-
         $("#example-modal").on("open.zf.reveal", function () {
             exampleModalVisible = true;
         });
-
         $("#example-modal").on("closed.zf.reveal", function () {
             exampleModalVisible = false;
+        });
+
+        ellipsisModal = new Foundation.Reveal($("#ellipsis-modal"));
+        $("#ellipsis-modal").on("open.zf.reveal", function () {
+            ellipsisModalVisible = true;
+        });
+        $("#ellipsis-modal").on("closed.zf.reveal", function () {
+            ellipsisModalVisible = false;
         });
 
         $(window).keydown(function(event){ /* keep the page from submitting when user presses Enter */
@@ -330,7 +363,6 @@ else
         else {
             page = @Model.PageNumber;
         }
-
         updateButton(page, sortBy, sortDirection, "", "");
     });
 
@@ -345,7 +377,6 @@ else
     });
 
     function undoSearch(sortby, sortdir, page) {
-        debugger;
         var sortBy = sortby;
         var sortDirection = sortdir;
         var page = page;
