--- a/InternshipSkeleton/Views/LogInfo/SearchIndex.cshtml
+++ b/InternshipSkeleton/Views/LogInfo/SearchIndex.cshtml
@@ -99,7 +99,7 @@
                     <td>
                         @currentRow.Object
                         @if (currentRow.Object.Contains('\n') || (currentRow.Object.Length >= 40))
-                        {<br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis(`@currentRow.Object`);" />}
+                        {<br /> <img src="~/Content/ellipsis-button.png" class="ellipsisButton" onclick="openEllipsis('@currentRow.Object');" />}
                     </td>
                     <td>
                         @if (currentRow.Important == null) 
