--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -63,7 +63,14 @@
 <div class="container">
     <div class="row">
         <div class="col-md-2">
-            <label class="pageLabel">Page: @Model.PageNumber / @Model.TotalPages</label> <br />
+            @if (!noResults)
+            {
+                <label class="pageLabel">Page: @Model.PageNumber / @Model.TotalPages</label>
+            }
+            else
+            {
+                <label class="pageLabel">Page: 0 / 0</label>
+            }
         </div>
         <div class="col-md-2">
             <h5>@Model.TotalItems total results</h5>
